react-wordle/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --animation-speed: 1000ms;
  --animation-speed-fast: 250ms;
  --animation-speed-popup: 20s;
  --move-down-popup-anim: calc(200%);
  --move-up-popup-anim: calc(-200%);
  --default-cell-bg-color: theme('colors.white');
  --default-cell-border-color: theme('colors.black');
  --default-cell-text-color: theme('colors.black');
  --absent-cell-bg-color: theme('colors.slate.400');
  --correct-cell-bg-color: theme('colors.green.200');
  --present-cell-bg-color: theme('colors.yellow.100');
  --fade-out-opacity: 10%;
}

.dark {
  --default-cell-bg-color: theme('colors.neutral.800');
  --default-cell-border-color: theme('colors.white');
  --default-cell-text-color: theme('colors.white');
  --absent-cell-bg-color: theme('colors.neutral.600');
}

.high-contrast {
  --correct-cell-bg-color: theme('colors.orange.400');
  --present-cell-bg-color: theme('colors.cyan.400');
}

.cell-fill-animation {
  animation: onTypeCell linear;
  animation-duration: 0.35s;
}

.cell-reveal {
  animation-duration: 0.35s;
  animation-timing-function: linear;
  animation-fill-mode: backwards;
}

.cell-reveal.absent {
  animation-name: fade-in, revealAbsentCharCell;
}

.cell-reveal.correct {
  animation-name: fade-in, revealCorrectCharCell;
}

.cell-reveal.present {
  animation-name: fade-in, revealPresentCharCell;
}

.cell-reveal > .letter-container {
  animation: offsetLetterFlip 0.35s linear;
  animation-fill-mode: backwards;
}

svg.cursor-pointer {
  transition: all var(--animation-speed-fast);
}

svg.cursor-pointer:hover {
  transform: scale(1.2);
}

.jiggle {
  animation: jiggle linear;
  animation-duration: var(--animation-speed-fast);
}

.checking {
  transition: opacity var(--animation-speed);
  opacity: var(--fade-out-opacity);
}

.puzzle {
  height: 30%;
  width: 30%;
  border: 2px solid;
  border-radius: 50%;
  position: absolute;
  background-color: #ffffff;
}

.puzzle-out.puzzle-top {
  transform: translate(0%, -205%);
  border-bottom-color: transparent;
}

.puzzle-out.puzzle-bottom {
  transform: translate(0%, 205%);
  border-top-color: transparent;
}

.puzzle-in.puzzle-left {
  transform: translate(-140%, 0%);
  border-left-color: transparent;
}

.puzzle-in.puzzle-right {
  transform: translate(140%, 0%);
  border-right-color: transparent;
}

.anim-cell-client.anim-color-correct .puzzle-out {
  animation-name: popupCellCorrect;
  animation-duration: var(--animation-speed-popup);
  animation-iteration-count: infinite;
}

.anim-cell-client.anim-color-present .puzzle-out {
  animation-name: popupCellPresent;
  animation-duration: var(--animation-speed-popup);
  animation-iteration-count: infinite;
}

.anim-cell-client.anim-color-absent .puzzle-out {
  animation-name: popupCellAbsent;
  animation-duration: var(--animation-speed-popup);
  animation-iteration-count: infinite;
}

.anim-cell-client {
  z-index: 10;
  margin-bottom: 4em;
  position: absolute;
}

.letter-container {
  z-index: 20;
  width: 100%;
}

.anim-cell-client.anim-color-absent.delay0 {
  animation-name: popupMoveDown1, popupCellAbsent1;
  animation-duration: var(--animation-speed-popup);
  animation-iteration-count: infinite;
}

.anim-cell-client.anim-color-absent.delay0 .puzzle-out {
  animation-name: popupCellAbsent1;
  animation-duration: var(--animation-speed-popup);
  animation-iteration-count: infinite;
}

@keyframes popupMoveDown1 {
  0% {
    transform: translate(0, 0);
  }
  2% {
    transform: translate(0, 0);
  }
  4% {
    transform: translate(0, var(--move-down-popup-anim));
  }
  8% {
    transform: translate(0, var(--move-down-popup-anim));
  }
  24% {
    transform: translate(428%, var(--move-down-popup-anim));
  }
  28% {
    transform: translate(0, 0)
  }
}

@keyframes popupCellAbsent1 {
  4% {
    background-color: var(--default-cell-bg-color);
  }
  8% {
    background-color: var(--absent-cell-bg-color);
  }
  96% {
    background-color: var(--absent-cell-bg-color);
  }
}

.anim-cell-client.anim-color-correct.delay1 {
  animation-name: popupMoveDown2, popupCellCorrect2;
  animation-duration: var(--animation-speed-popup);
  animation-iteration-count: infinite;
}

.anim-cell-client.anim-color-correct.delay1 .puzzle-out {
  animation-name: popupCellCorrect2;
  animation-duration: var(--animation-speed-popup);
  animation-iteration-count: infinite;
}

@keyframes popupMoveDown2 {
  28% {
    transform: translate(0, 0);
  }
  32% {
    transform: translate(0, var(--move-down-popup-anim));
  }
  36% {
    transform: translate(0, var(--move-down-popup-anim));
  }
  40% {
    transform: translate(0, 0)
  }
}

@keyframes popupCellCorrect2 {
  32% {
    background-color: var(--default-cell-bg-color);
  }
  36% {
    background-color: var(--correct-cell-bg-color);
  }
  96% {
    background-color: var(--correct-cell-bg-color);
  }
}

.anim-cell-client.anim-color-correct.delay2 {
  animation-name: popupMoveDown3, popupCellCorrect3;
  animation-duration: var(--animation-speed-popup);
  animation-iteration-count: infinite;
}

.anim-cell-client.anim-color-correct.delay2 .puzzle-out {
  animation-name: popupCellCorrect3;
  animation-duration: var(--animation-speed-popup);
  animation-iteration-count: infinite;
}

@keyframes popupMoveDown3 {
  40% {
    transform: translate(0, 0);
  }
  44% {
    transform: translate(0, var(--move-down-popup-anim));
  }
  48% {
    transform: translate(0, var(--move-down-popup-anim));
  }
  52% {
    transform: translate(0, 0)
  }
}

@keyframes popupCellCorrect3 {
  44% {
    background-color: var(--default-cell-bg-color);
  }
  48% {
    background-color: var(--correct-cell-bg-color);
  }
  96% {
    background-color: var(--correct-cell-bg-color);
  }
}

.anim-cell-client.anim-color-present.delay3 {
  animation-name: popupMoveDown4, popupCellPresent4;
  animation-duration: var(--animation-speed-popup);
  animation-iteration-count: infinite;
  animation-delay: 9s;
}
/* ... */

